module refactoring + now index.htm redirects to sereval experiments

--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <html>
 
 <head>
-
   <title>Shaka experiments</title>
-
-  <link rel="stylesheet" href="css/main.css" />
-
 </head>
 
 <body>
 
-  <h1>Shaka experiments</h1>
-
-  <video id="video" width="640" poster="//shaka-player-demo.appspot.com/assets/poster.jpg" controls autoplay></video>
-
-  <script src="js/dist/shaka-player.compiled.js"></script>
-  <script src="js/main.js"></script>
+  <h1><a href="./lifecycle.html">Part 1 - Player Lifecycle</h1>
+  <h1><a href="./network.html">Part 2 - Network calls</h1>
 
 </body>
 
